--- a/mygcs/src/main/res/layout/activity_main.xml
+++ b/mygcs/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/recycler_view"
+        app:layout_constraintTop_toBottomOf="@id/vehTelemRow2"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+
 
     <fragment
         android:id="@+id/map"
