--- a/mygcs/src/main/res/layout/activity_main.xml
+++ b/mygcs/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
         android:id="@+id/recycler_view"
+        android:scrollbars="vertical"
+        android:background="#7f1290ff"
         app:layout_constraintTop_toBottomOf="@id/vehTelemRow2"
         app:layout_constraintLeft_toLeftOf="parent" />
 
