임무 비행 진행중

--- a/mygcs/src/main/res/layout/activity_main.xml
+++ b/mygcs/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="16dp"
-        android:background="#ffa159"
+        android:background="@drawable/spinner_background"
         android:gravity="center"
         android:onClick="onArmButtonTap"
         android:text="ARM"
@@ -73,7 +73,7 @@
         android:id="@+id/altitudeButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text=""
         android:textColor="#ffffff"
@@ -88,7 +88,7 @@
         android:id="@+id/upAltitudeButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="+0.5"
         android:textColor="#ffffff"
@@ -104,7 +104,7 @@
         android:id="@+id/downAltitudeButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="-0.5"
         android:textColor="#ffffff"
@@ -121,7 +121,7 @@
         android:id="@+id/flightWidthButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text=""
         android:textColor="#ffffff"
@@ -136,7 +136,7 @@
         android:id="@+id/upWidthButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="+0.5"
         android:textColor="#ffffff"
@@ -152,7 +152,7 @@
         android:id="@+id/downWidthButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="-0.5"
         android:textColor="#ffffff"
@@ -169,7 +169,7 @@
         android:id="@+id/distanceButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text=""
         android:textColor="#ffffff"
@@ -184,7 +184,7 @@
         android:id="@+id/upDistanceButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="+10"
         android:textColor="#ffffff"
@@ -200,7 +200,7 @@
         android:id="@+id/downDistanceButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="-10"
         android:textColor="#ffffff"
@@ -217,7 +217,7 @@
         android:id="@+id/missionButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="임무"
         android:textColor="#ffffff"
@@ -233,7 +233,7 @@
         android:id="@+id/missionABButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="AB"
         android:textColor="#ffffff"
@@ -249,7 +249,7 @@
         android:id="@+id/missionPolygonButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="다각형"
         android:textColor="#ffffff"
@@ -266,7 +266,7 @@
         android:id="@+id/missionCancelButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="#6e4d43"
+        android:background="@drawable/small_button_background"
         android:gravity="center"
         android:text="취소"
         android:textColor="#ffffff"
