임무 디버그 필요

--- a/mygcs/src/main/res/layout/activity_main.xml
+++ b/mygcs/src/main/res/layout/activity_main.xml
@@ -437,6 +437,7 @@
         android:textColor="#ffffff"
         android:textSize="16dp"
         android:visibility="invisible"
+        android:onClick="missionButtonClick"
         app:layout_constraintBottom_toBottomOf="@+id/map"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.400"
